# techman83.me

./: .gitignore  Makefile  assets.py  pyproject.toml
source/: about.rst  conf.py  index.rst
source/_static/: custom.css
source/_templates/ablog/: archives.html  postcard.html  postcard2.html
source/posts/: hardware.rst  personal.rst  programming.rst  talks.rst
source/posts/2014/: 2014-01-19-first_post.md  2014-01-20-eventstreamr.md  2014-02-06-repair_bb.md  2014-02-11-bah_wrong_branch.md  2014-02-12-refit_bb.md  2014-02-20-dancing_with_websockets.md  2014-03-23-repair_freehub.md  2014-07-29-xperiaz_warranty.md  2014-08-04-jira_automation.md  2014-08-26-webservice_strava.md
source/posts/2015/: 2015-04-16-EventStreamr.md  2015-06-09-powershell.md
source/posts/2017/: 2017-01-08-overhauling_techman83.me.md  2017-01-11-automating_your_home_with_themachine.md  2017-01-22-hacking_hugs_profit.md  2017-06-04-dont_underestimate_the_doorbell.md
source/posts/2018/: 2018-01-22-come_on_do_you_want_your_mods_to_live_forever.md  2018-01-29-the_hugs_strike_back.md
source/posts/2022/: 2022-08-13-no_one_should_write_terraform.md
source/posts/2024/: 2024-11-18-overhauling_techman83.me_again.md  2024-12-06-cdks_best_feature.md
